# lead_intake_agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/.next/dev/: build-manifest.json  prerender-manifest.json  trace
frontend/.next/dev/cache/: .rscinfo
frontend/.next/dev/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/dev/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/dev/static/chunks/: 0x6h_@swc_helpers_cjs_0bgvr5j._.js  0x6h_@swc_helpers_cjs_0bgvr5j._.js.map  0x6h_next_0ls4_dp._.js  0x6h_next_0ls4_dp._.js.map  0x6h_next_dist_0ievkzp._.js  0x6h_next_dist_0ievkzp._.js.map  0x6h_next_dist_0qglrwq._.js  0x6h_next_dist_0qglrwq._.js.map  0x6h_next_dist_build_polyfills_polyfill-nomodule.js.map  0x6h_next_dist_client_05yllg8._.js  0x6h_next_dist_client_05yllg8._.js.map  0x6h_next_dist_compiled_0gs6sjo._.js  0x6h_next_dist_compiled_0gs6sjo._.js.map  0x6h_next_dist_compiled_next-devtools_index_111f-xq.js  0x6h_next_dist_compiled_react-dom_0e3o6ri._.js  0x6h_next_dist_compiled_react-dom_0e3o6ri._.js.map  0x6h_next_dist_compiled_react-server-dom-turbopack_035l2p8._.js  0x6h_next_dist_compiled_react-server-dom-turbopack_035l2p8._.js.map  Desktop_CrewAI_Crews_lead_intake_agent_frontend_0rqeker._.js  (+15 more)
frontend/app/: layout.tsx  page.tsx
src/lead_intake_agent/: api.py  crew.py  main.py  models.py
src/lead_intake_agent/config/: agents.yaml  tasks.yaml
(+91 files in other folders)
